--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      name="google-site-verification"
+      content="k-g9eI2rtDhubX6Jz2LZJSUngmlrgneJjrpo18MRWKA"
+    />
     <link rel="canonical" href=”https://grupo-cesae.vercel.app/” />
     <link
       rel="stylesheet"
